# easyproxy-py

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  justfile  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: BUILD_BINARY.md  DAEMON.md  DEMO.md  JUSTFILE_GUIDE.md  MAKEFILE_GUIDE.md  PACKAGING.md  PROJECT_STRUCTURE.md  architecture.md
easyproxy/: __init__.py  __main__.py  auth.py  cli.py  config.py  logger.py  proxy.py
scripts/: README.md  build_binary.sh  clean_build.sh
scripts/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
scripts/systemd/: easyproxy.service  install.sh  uninstall.sh
